# os-labs

./: CMakeLists.txt  README.md
cp/: CMakeLists.txt  main.cpp
cp/include/: job_dag.hpp  job_exec.hpp
cp/src/: job_dag.cpp  job_exec.cpp
data/cp/ex1/: ex1.json
data/cp/ex2/: ex2.json
data/cp/ex3/: ex3.json
lab1/: CMakeLists.txt  main.cpp
lab1/include/: lab1.hpp  utils.hpp
lab1/src/: child.cpp  lab1.cpp  utils.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: lab2.hpp
lab2/src/: lab2.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: lab3.hpp  utils.hpp
lab3/src/: child.cpp  lab3.cpp  utils.cpp
lab4/: CMakeLists.txt  dynamic_main.cpp  static_main.cpp
lab4/include/: lib.hpp  utils.hpp
lab4/src/: lib1.cpp  lib2.cpp  utils.cpp
lab5-7/: CMakeLists.txt
lab5-7/include/: socket.hpp  topology.hpp
lab5-7/src/: calculation_node.cpp  control_node.cpp  socket.cpp  topology.cpp
tests/: CMakeLists.txt  cp_test.cpp  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test1.cpp  lab5-7_test.cpp
